@@ -2,6 +2,7 @@
 
 2012-09-08 Steve
 	* Fixed the GRL in NtMaker
+	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
 
 2012-09-06 Steve
 	* Added the TTC incomplete event veto to the SusyNtMaker cutflow
